Added a lightning_model to perform training (on patches) and predictions (on volumes).

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,65 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from models.lightning_models import Unet3D\n",
     "from modules.segmentation_model import Unet\n",
-    "from torchinfo import summary\n",
     "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Unet(\n",
-    "    in_channels=1,\n",
-    "    depths=[3, 3, 12, 3],\n",
-    "    channel_multipliers=[1, 2, 4, 8],\n",
-    "    embed_dim=12,\n",
-    "    classes=1,\n",
-    ")\n"
+    "model = Unet3D(model=Unet, loss=torch.nn.BCELoss(), patch_size=(64, 64, 64), strides=(32, 32, 32), padding=\"same\", final_activation=torch.nn.Sigmoid())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(model)"
+    "test_tensor = torch.rand((1, 1, 128, 128, 128))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prediction took 11.32 seconds\n"
+     ]
+    }
+   ],
    "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model = model.to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "summary(model, input_size=(1, 1, 128, 128, 128), depth=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(model)"
+    "pred = model.predict_step(test_tensor, patch_size=(64, 64, 64), strides=(32, 32, 32), padding=\"same\", unpad=True, verbose=True)"
    ]
   }
  ],
