--- a/main.ipynb
+++ b/main.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from models.lightning_models import Unet3D\n",
     "from modules.segmentation_model import Unet, PositionalUnet\n",
-    "import torch\n",
-    "import torchinfo"
+    "import torch"
    ]
   },
   {
@@ -23,7 +22,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_model = Unet3D(\n",
+    "    model=PositionalUnet,\n",
+    "    loss=torch.nn.BCELoss(),\n",
+    "    patch_size=(64, 64, 64),\n",
+    "    strides=(32, 32, 32),\n",
+    "    padding=\"same\",\n",
+    "    final_activation=torch.nn.Sigmoid(),\n",
+    "    positional=True,\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +55,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prediction took 11.32 seconds\n"
+      "prediction took 8.80 seconds\n"
      ]
     }
    ],
    "source": [
-    "pred = model.predict_step(test_tensor, patch_size=(64, 64, 64), strides=(32, 32, 32), padding=\"same\", unpad=True, verbose=True)"
+    "pred = pos_model.predict_step(test_tensor, patch_size=(64, 64, 64), strides=(32, 32, 32), padding=\"same\", unpad=True, verbose=True, positional=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(100.0579, grad_fn=<MulBackward0>)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos_model.training_step((test_tensor, test_tensor, torch.rand((1, 3, 1))), 0)"
    ]
   },
   {
@@ -192,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
